<resources>
    <string name="app_name">Weather App</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="get_weather">Get Weather</string>
    <string name="degree">12°C</string>
    <string name="city_name">City Name</string>
    <string name="country_code">Country Code</string>
    <string name="error_message">Try Again</string>
    <string name="greetings">Hello, Today`s Weather At</string>
    <string name="daily_weather">Here`s 7 Day Weather</string>
    <string name="status">Clear Sky</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="_sunrise">Sunrise</string>
    <string name="_06_40_am">06:40 AM</string>
    <string name="_sunset">Sunset</string>
    <string name="_wind">Wind</string>
    <string name="_pressure">Pressure</string>
    <string name="_humidity">Humidity</string>
    <string name="_visibility">Visibility</string>
    <string name="_clear_sky">Clear Sky</string>
    <string name="please_wait">Please Wait</string>
</resources>