<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/tv_greatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/_23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_greatings" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_day"
            android:padding="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_city_code">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/view_tempereture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15dp"
                android:background="@drawable/bg_degree"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_cloud"
                    android:tint="@color/lightBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_clear_sky"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather"/>
                
                <TextView
                    android:id="@+id/tv_degree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/lightBlue"
                    android:textSize="@dimen/_80sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/tv_degree">

                    <TextView
                        android:id="@+id/tv_min_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sp" />

                    <TextView
                        android:id="@+id/tv_max_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_degree">

            <LinearLayout
                android:id="@+id/view_details_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:id="@+id/view_sunrise"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_sunrise"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_sunrise"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_sunset"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_sunset"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_sunset"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_wind"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_wind"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_wind"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_details_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                 android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_details_one"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:id="@+id/view_pressure"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_pressure"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_pressure"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_humidity"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_humidity"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_humidity"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_visibily"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_visibily"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_visibility"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_visibilty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_weather"
            app:layout_constraintTop_toBottomOf="@id/view_details"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_seven_weather"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_day"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_weather"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
